--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://github.com/ChristophGeske/ARCoreInsideOutTrackingGearVr</title>
-<meta http-equiv="refresh" content="0; URL=https://github.com/ChristophGeske/ARCoreInsideOutTrackingGearVr">
-<link rel="canonical" href="https://github.com/ChristophGeske/ARCoreInsideOutTrackingGearVr">
+<title>Redirecting to Amazon</title>
+<meta http-equiv="refresh" content="0; URL=https://amzn.to/3reVxLO">
+<link rel="canonical" href="https://amzn.to/3reVxLO">
