Changed Link to 265gb version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to Amazon</title>
-<meta http-equiv="refresh" content="0; URL=https://amzn.to/3reVxLO">
-<link rel="canonical" href="https://amzn.to/3reVxLO">
+<meta http-equiv="refresh" content="0; URL=https://amzn.to/37zlVbl">
+<link rel="canonical" href="https://amzn.to/37zlVbl">
