--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to Amazon</title>
-<meta http-equiv="refresh" content="0; URL=https://amzn.to/37zlVbl">
-<link rel="canonical" href="https://amzn.to/37zlVbl">
+<meta http-equiv="refresh" content="0; URL=http://bit.ly/2KArCwF">
+<link rel="canonical" href="http://bit.ly/2KArCwF">
